<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">msptools</string>
<string name="gsm_activity_name">GSM</string>
<string name="gps_activity_name">GPS</string>
<string name="ekahau_activity_name">Ekahau</string>
<string name="chat_client_activity_name">Chat-Client</string>
<string name="msp_client_activity_name">MSP-Client</string>
<string name="menu_preferences">Preferences</string>
<string name="menu_update">Update</string>
<string name="update_freq_promt">Select Update Frequency</string>
<string name="ok">OK</string>
<string name="cancel">Cancel</string>
<string name="gsm_preferences">GSM Preferences</string>
<string name="ekahau_update_intent_name">ekahau_update</string>
<string name="nickname_promt">choose your nick</string>
<string name="send_position">Send Position</string>
<string name="buddy_button">Show Buddys</string>
<string name="found_buddy">found_buddy</string>

<string name="camera_activity_name">Camera</string>
<string name="location_foto_activity_name">Create Footprint</string>
<string name="upload_file_name">Insert filename here (without type)</string>

</resources>


