<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  
  
  <EditText
        android:id="@+id/chat_ausgabe"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:lines="8"
        android:editable = "false"
 />

  <EditText
        android:id="@+id/chat_eingabe"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:lines="3"
        
 />  
 
 <Button
 		android:id="@+id/chat_button"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_gravity="center"
 		android:text="@string/ok"
 		
 	 />
 	 
 	 
 <EditText
 		android:id="@+id/edit_nickname"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_gravity="center"
 		android:hint="@string/nickname_promt"		
 		
 />
 
 
  
 <LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="horizontal"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  
 	<CheckBox 
   		android:id="@+id/position_box"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:textSize="12sp"
  		android:checked="false"
  		android:text="@string/send_position"
 
	 />
	 
	 <Button
	 	android:id="@+id/buddy_button"
	 	android:layout_width="wrap_content"
	 	android:layout_height="fill_parent"
	 	android:text="@string/buddy_button"
	 	
	 />
</LinearLayout>
 


 

</LinearLayout>


