<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  	<TextView
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:text="@string/update_freq_promt"
  	/>
  	<Spinner
  		android:id="@+id/update_freq"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:drawSelectorOnTop="true"
  	/>
  	<LinearLayout
  		android:orientation="horizontal"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		>
  		<Button
  			android:id="@+id/okButton"
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:text="@string/ok"
  		/>
  		<Button
  			android:id="@+id/cancelButton"
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:text="@string/cancel"
  		/>
  	</LinearLayout>
</LinearLayout>
